[project]
name = "edgetest"
version = "0.1.0"
description = "Perform Stress Testing in Device"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gdown>=5.2.0",
    "lap>=0.5.12",
    "onnx>=1.17.0",
    "onnxslim>=0.1.51",
    "ultralytics>=8.3.129",
]

[project.optional-dependencies]
cpu = ["torch>=2.7.0", "torchvision>=0.22.0", "onnxruntime>=1.21.1"]
gpu = ["torch>=2.7.0", "torchvision>=0.22.0", "tensorrt>=10.10.0.31", "onnxruntime-gpu>=1.20.1"]
xpu = ["torch>=2.7.0", "torchvision>=0.22.0", "openvino>=2025.1.0", "onnxruntime-openvino>=1.20.1", "pytorch-triton-xpu>=3.3.0"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu",  extra = "cpu" },
  { index = "pytorch-cu126", extra = "gpu" },
  { index = "pytorch-xpu", extra = "xpu" },
]
torchvision = [
  { index = "pytorch-cpu",  extra = "cpu" },
  { index = "pytorch-cu126", extra = "gpu" },
  { index = "pytorch-xpu", extra = "xpu" },
]

pytorch-triton-xpu = [
  { index = "pytorch-xpu", extra = "xpu" },
]


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true

[tool.uv]
conflicts = [[{extra="cpu"},{extra="gpu"},{extra="xpu"}]]
